# app.js
@@ -1,10 +1,10 @@
 const dotenv = require("dotenv");
 dotenv.config({ path: "./config.env" });
 const express = require("express");
-const bodyParser = require("body-parser");
 const rateLimit = require("express-rate-limit");
 const userRouter = require("./routes/user.routes");
-const courseRouter = require('./routes/course.routes')
+const courseRouter = require('./routes/course.routes');
+const enrollRouter = require('./routes/enrollment.routes');
 const session = require('express-session'); 
 const morgan = require("morgan");
 const cors = require("cors");
@@ -54,6 +54,7 @@ app.use(express.json({ limit: "10kb" }));
 app.use(cookieParser());
 app.use("/api/v1/users", userRouter);
 app.use("/api/v1/courses", courseRouter);
+app.use("/api/v1/enrollments", enrollRouter);
 
 app.all("*", (req, res, next) => {
   next(new AppError(`Can't find ${req.originalUrl} on this server`, 404));
